# robot-kinematics

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build_and_test.yml  test_report.yml
src/: CMakeLists.txt  test_draw.cpp
src/app/: CMakeLists.txt
src/app/ackermann/: CMakeLists.txt  app_ackermann.cpp
src/deprecated/: test_draw.cpp
src/experimental/: CMakeLists.txt  test_plot.cpp
src/model/: CMakeLists.txt
src/model/include/model/: ackermann.hpp
src/model/src/ackermann/: ackermann.cpp  ackermann_impl.cpp
src/modules/: CMakeLists.txt
src/modules/DWA/include/: DWA.h
src/modules/DWA/src/: DWA.c
src/modules/Odometry/: CMakeLists.txt
src/modules/Odometry/include/Odometry/: Odometry.h
src/modules/Odometry/src/: Odometry.c
src/modules/Odometry/test/: OdometryTest.cpp
src/modules/PotentialField/: CMakeLists.txt  README.md
src/modules/PotentialField/docs/: Robot.drawio  Robot.md
src/modules/PotentialField/include/PotentialField/: PotentialField.h
src/modules/PotentialField/src/: PotentialField.c
src/modules/PotentialField/test/: PotentialFieldTest.cpp
src/modules/TrajectoryPredictor/: CMakeLists.txt
src/modules/TrajectoryPredictor/include/TrajectoryPredictor/: TrajectoryPredictor.h
src/modules/TrajectoryPredictor/src/: TrajectoryPredictor.c
src/modules/TrajectoryPredictor/test/: TrajectoryPredictorTest.cpp
src/ui/: CMakeLists.txt
src/ui/display/: CMakeLists.txt
src/ui/display/include/display/: display_base.hpp
src/ui/display/src/: display_base.cpp
src/ui/window/: CMakeLists.txt
src/ui/window/include/window/: window.hpp
src/ui/window/include/window/details/: glfw_version.hpp
src/ui/window/src/: window.cpp  window_impl.cpp
